--- a/example/index.html
+++ b/example/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="../dist/styles.css">
+  <link rel="stylesheet" href="../lib/styles.css">
 </head>
 <body>
   <div class="visualization"></div>
